# ChangeLog for net-p2p/rtorrent
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/rtorrent/ChangeLog,v 1.99 2007/11/13 16:32:17 drac Exp $

  13 Nov 2007; Samuli Suominen <drac@gentoo.org> rtorrent-0.7.8.ebuild:
  amd64 stable wrt #198558, thanks to Angelo Arrifano for testing.

  13 Nov 2007; Raúl Porcel <armin76@gentoo.org> rtorrent-0.7.9.ebuild:
  Add ~ia64 wrt #198844

  10 Nov 2007; Markus Rothe <corsair@gentoo.org> rtorrent-0.7.8.ebuild:
  Stable on ppc64; bug #198558

  09 Nov 2007; nixnut <nixnut@gentoo.org> rtorrent-0.7.8.ebuild:
  Stable on ppc wrt bug 198558

  09 Nov 2007; Dawid Węgliński <cla@gentoo.org> rtorrent-0.7.8.ebuild:
  Stable on x86 (bug #198558)

*rtorrent-0.7.9 (25 Oct 2007)

  25 Oct 2007; Timothy Redaelli <drizzt@gentoo.org> +rtorrent-0.7.9.ebuild:
  Version bump, thanks to Flameeyes for poking me.

  08 Sep 2007; Hanno Boeck <hanno@gentoo.org> ChangeLog:
  Place comment below econf-line, else it breaks.

*rtorrent-0.7.8 (08 Sep 2007)

  08 Sep 2007; Timothy Redaelli <drizzt@gentoo.org> +rtorrent-0.7.8.ebuild:
  Version bump wrt bug #182816.

  24 May 2007; Timothy Redaelli <drizzt@gentoo.org> rtorrent-0.7.4.ebuild:
  append-flags -fno-strict-aliasing wrt bug #179554

  05 Apr 2007; Timothy Redaelli <drizzt@gentoo.org> rtorrent-0.7.2.ebuild:
  Stable on ppc wrt bug #172469
  Thanks to Nathan Smith for testing.

*rtorrent-0.7.4 (04 Apr 2007)

  04 Apr 2007; Timothy Redaelli <drizzt@gentoo.org> +rtorrent-0.7.4.ebuild:
  Version bump (thx to Flameeyes for reporting on irc)

  29 Mar 2007; Markus Rothe <corsair@gentoo.org> rtorrent-0.7.2.ebuild:
  Stable on ppc64; bug #172469

  29 Mar 2007; Daniel Gryniewicz <dang@gentoo.org> rtorrent-0.7.2.ebuild:
  Marked stable on amd64 for bug #172469

  28 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  rtorrent-0.7.2.ebuild:
  stable x86, bug 172469

  27 Mar 2007; Timothy Redaelli <drizzt@gentoo.org> rtorrent-0.7.2.ebuild,