@@ -2,9 +2,9 @@ DIST rtorrent-0.7.1.tar.gz 414447 RMD160 01b42bc520abe7a6cae0b31e9b72dd65d4ae6a9
 DIST rtorrent-0.7.4.tar.gz 451415 RMD160 17c72af77b3184db0488147c4ae80d4019bea6f0 SHA1 4060913d19204c0978d6378a71f4898714ac20e4 SHA256 f028656bda47ab061ca2a723aebf511a44329f40f1fd7cf995b5fefdc992b876
 DIST rtorrent-0.7.8.tar.gz 489952 RMD160 77f9b1627a65804d54f204919c7b2d58c95d751b SHA1 9d3e2bba17a2049992001f1d1457e1f8f6c5973b SHA256 93c0291ac06cafd2466e7c0c1ce918544e49b15effc1d55b1e8a903e3d0f1d8c
 DIST rtorrent-0.7.9.tar.gz 489174 RMD160 8cfee138c0142ad22830b3d518e198f163063a84 SHA1 0b53bd3b2c15f93352607ab3685916fe27033450 SHA256 f06f72b1fec94177147b1db0aab15be4f62d1b0354811a67ae74e0cd1e50a119
-EBUILD rtorrent-0.7.1.ebuild 1487 RMD160 55aa10f4b21956dd26400e2ca4c3d7a82f234c86 SHA1 a6316247cf64fc2fe3ac463d6e976384f9595d1d SHA256 dc825d901366bda4e79f3e275390a8ef545224791c55b8d1e20f629d81b9a56c
-EBUILD rtorrent-0.7.4.ebuild 1516 RMD160 bed12a5bc34de27978f2f25c524da206942d5948 SHA1 7fa23326cc05ae4213f482ee692b370da62913fd SHA256 86619a21165ba0ba197a5551a03627aa08434f40933479410af3a4421d62b5bd
-EBUILD rtorrent-0.7.8.ebuild 1354 RMD160 10491a7ad490a14fa058b56de73457c9fd28e876 SHA1 804fa937d3f494d33e2143a482ccb0fecde4e2b1 SHA256 e1c0416eab042abc91a2bf1af8b7cfa9bd96006e18d65b6fa9758b0d747d5900
-EBUILD rtorrent-0.7.9.ebuild 1368 RMD160 6fe3822c11913a972af4a087600ac8af0d5abb59 SHA1 f47f8aeab9d1c1c5b7d6cd95b5ab42f1198c6e67 SHA256 0c60e9313f7e8db12462ca64ed9895a8e8e24e094b8b92f34613b9a3b80d9518
-MISC ChangeLog 13819 RMD160 4d9ea010d1a984bf87101a7fcec37341cac6c14c SHA1 34a1b07c30f13f32ecf5ef981f21179fc4c4a00f SHA256 370e0da7125fbadd6c76fb4832e171c1747d2be2abd0929f3655a3850f07ade9
+EBUILD rtorrent-0.7.1.ebuild 1499 RMD160 1ffd8c998ac23f2d22a827fee48bd02b4a97aad2 SHA1 fd33cf80a745521a492c69f1eff6994b9ffd0b8a SHA256 67b7cf21d3ca758ab353ab08a15e73e749c9713a21c3b85cde156022117fd99a
+EBUILD rtorrent-0.7.4.ebuild 1528 RMD160 e851f80d38ad030deed6be17e836dccfb55f8953 SHA1 cf21eac641d78b475bacd76ebed1a47e429601c6 SHA256 ef9a90d7eec6c44072bb2ec169de7d8b3f0da06a4d52bb0bfbaaccf0831e6572
+EBUILD rtorrent-0.7.8.ebuild 1366 RMD160 8b636ccf47d59494e6b843e6f2c1f01572e60920 SHA1 b9f30f8f9dc6c53ecd63800a99344b2410fe7bbe SHA256 4bc2d38c11fa3b5fd3bd89ca9cd6fbf51a79f9fece31c82fa865419765287fb6
+EBUILD rtorrent-0.7.9.ebuild 1335 RMD160 2fd51dceb2fd43d2062fb9a322b7ba94af9b6172 SHA1 9c2a11710d309f604d867502d56784874e753e1c SHA256 7052457c7a18b9e8c8b4198bff338ff69e4cc43db3c91f81441db074828570e1
+MISC ChangeLog 13959 RMD160 057040a4d818860ff9e1032bd26959c9867f4480 SHA1 88c1c63ae138127bd1cb613adc286d8dbf884794 SHA256 c3e99b9cad6559638db699e33c5ac4475a8173fa171c70673cf2b2a63a25d801
 MISC metadata.xml 424 RMD160 876cded3dbbceea6740eba9b76df952e4ccba094 SHA1 0840c9f44d278be83028950b8a0437ea8b81bcde SHA256 e5f66fec21c1690d34b2a562a6c7edced69477abc3996b9f35e611e31667ec17
